<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainPageActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/ic_up_wave"
            app:layout_constraintBottom_toTopOf="@+id/guidelineH1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/list_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cpb_background_progressbar_color="#b6bbd8"
            app:cpb_background_progressbar_width="10dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#0099FF"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false"
            app:layout_constraintBottom_toTopOf="@id/guidelineH2"
            app:layout_constraintEnd_toStartOf="@id/guidelineV2"
            app:layout_constraintStart_toEndOf="@id/guidelineV1"
            app:layout_constraintTop_toTopOf="@id/guidelineH1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/charge_symbol"
            android:src="@drawable/flash"
            app:layout_constraintBottom_toTopOf="@+id/SubGuidelineMiddle"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/guidelineH1"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/SubGuidelineMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <TextView
            android:id="@+id/battery_level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="333333%"
            android:textColor="#0099FF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
            app:layout_constraintTop_toTopOf="@+id/SubGuidelineMiddle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineH2"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#96ADEA"
                app:layout_constraintBottom_toTopOf="@id/subguidelineH1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineV1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/subguidelineV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/check_your_battery_state"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/subguidelineH1"
                app:layout_constraintEnd_toStartOf="@+id/subguidelineV3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/voltagePicture"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/vlotage"
                android:src="@drawable/danger"
                app:layout_constraintBottom_toTopOf="@+id/subguidelineH2"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV1"
                app:layout_constraintTop_toTopOf="@+id/subguidelineH1" />

            <TextView
                android:id="@+id/voltage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/voltage"
                android:textColor="#C3FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/voltagePicture"
                app:layout_constraintTop_toTopOf="@+id/voltagePicture" />

            <TextView
                android:id="@+id/voltage_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/voltage_label"
                app:layout_constraintTop_toBottomOf="@+id/voltage_label" />

            <ImageView
                android:id="@+id/techPicture"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/technology"
                android:src="@drawable/cpu"
                app:layout_constraintBottom_toTopOf="@+id/subguidelineH2"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV2"
                app:layout_constraintTop_toTopOf="@+id/subguidelineH1" />

            <TextView
                android:id="@+id/tech_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/technology"
                android:textColor="#C3FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/techPicture"
                app:layout_constraintTop_toTopOf="@+id/techPicture" />

            <TextView
                android:id="@+id/tech_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tech_label"
                app:layout_constraintTop_toBottomOf="@+id/tech_label" />

            <ImageView
                android:id="@+id/plugStatePicture"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/plug_state"
                android:src="@drawable/unplugged"
                app:layout_constraintBottom_toTopOf="@+id/subguidelineH3"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV1"
                app:layout_constraintTop_toTopOf="@+id/subguidelineH2"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/plug_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/plug_state"
                android:textColor="#C3FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/plugStatePicture"
                app:layout_constraintTop_toTopOf="@+id/plugStatePicture" />

            <TextView
                android:id="@+id/plug_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/plug_label"
                app:layout_constraintTop_toBottomOf="@+id/plug_label" />

            <ImageView
                android:id="@+id/tempPicture"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/temperature"
                android:src="@drawable/thermometer"
                app:layout_constraintBottom_toTopOf="@+id/subguidelineH3"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV2"
                app:layout_constraintTop_toTopOf="@+id/subguidelineH2"
                app:layout_constraintVertical_bias="0.50" />

            <TextView
                android:id="@+id/temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/temperature"
                android:textColor="#C3FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tempPicture"
                app:layout_constraintTop_toTopOf="@+id/tempPicture" />

            <TextView
                android:id="@+id/temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/temp_label"
                app:layout_constraintTop_toBottomOf="@+id/temp_label" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/health_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/subguidelineV3"
                app:layout_constraintStart_toStartOf="@+id/subguidelineV1"
                app:layout_constraintTop_toTopOf="@+id/subguidelineH3">

                <TextView
                    android:id="@+id/health_calc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="gfsajgka"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.598"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgHealth"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/cpu"
                    app:layout_constraintBottom_toBottomOf="@+id/health_calc"
                    app:layout_constraintEnd_toStartOf="@+id/health_calc"
                    app:layout_constraintTop_toTopOf="@+id/health_calc" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_menu"
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:clickable="true"
        android:fitsSystemWindows="true"
        android:focusable="true">

        <include
            android:id="@+id/inc_drawer"
            layout="@layout/drawer_layout" />
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>